# Recursive-Raptors

./: .gitattributes  .gitmodules  CSVreader.cpp  ClassPractice.cpp  Class_Example.txt  MaterialProperties  PointersPractice.cpp  PointersPractice.txt  Proj1Csv.cpp  Proj1CsvCol.cpp  RobotGraphs.py  VTKtoOBJ.cpp  VolMesh.cpp  git practice.txt  helloBhz.cpp  merge_mesh  merge_mesh.cpp  merge_mesh_CGAL.cpp  pntr.cpp  reader_file.csv  transform_mesh.cpp
Mesh_Merger/: CMakeLists.txt  test5.cpp
Mesh_Merger/mesh_lib/: mesh_lib.cpp  mesh_lib.h
Prev_Mesh_Merger/: merge_mesh_CGAL.cpp  test2.cpp
Proj2/: CMakeCache.txt  CMakeLists.txt  Makefile  Project_3_Visual.cpp  VTKtoOBJ.cpp  VolMesh.cpp  VolMesh_old.cpp  boolDemo.cpp  cmake_install.cmake  corefineDemo.cpp  mesh_demo.cpp  mesh_demo_union.cpp  mesh_demo_vol.cpp  operDemo  operDemo.cpp  tempCodeRunnerFile.cpp  vizmesh.cpp
Proj2/Raptor Work/polyMesh/: VolumeMesh[1].cpp  VolumeMesh[2].cpp  a.out  faces  output.vtk  output2.vtk
Proj2/Visualization_Main/Viz_Mesh/: Viz_Mesh.cpp  Viz_Mesh.vcxproj.filters
Proj2/Visualization_Main/Viz_Mesh/Viz_Mesh/Release/: Viz_Mesh.ipdb
Proj2/Visualization_Main/Viz_Mesh/Viz_Mesh/Release/Viz_Mesh.tlog/: Cl.items.tlog  link.write.1.tlog
Proj2/Visualization_Main/Viz_Mesh/Viz_Mesh/x64/Debug/: vc143.idb
Proj2/Visualization_Main/Viz_Mesh/Viz_Mesh/x64/Debug/Viz_Mesh.tlog/: CL.command.1.tlog  Viz_Mesh.lastbuildstate
Proj2/assets/: CMakeLists.txt  ReadWriteObj.cpp  a.out  test.cpp  test2.cpp  test3.cpp  test4  test4.cpp  testcopy3.cpp
Proj2/assets/build_test4/: CMakeCache.txt  Makefile  Test4  cmake_install.cmake
Proj2/assets/csv/: carbon_thickness.csv  exhaust_temperature.csv  glue_thickness.csv  steel_thickness.csv
Proj2/assets/docs/: .~lock.ProjectII_grading_and_presentation_template.docx#
Proj2/assets/examples/robot/2/polyMesh/: pointZones
Proj2/assets/examples/robot/3/polyMesh/: boundary
Proj2/assets/examples/robot/constant/polyMesh/: neighbour  owner
Proj2/assets/examples/sphere/system/: blockMeshDict
Proj2/assets/robot/: Allclean  Allrun  robot_2.vtk
Proj2/assets/robot/0.orig/: U  k  nut  omega  p
Proj2/assets/robot/0.orig/include/: fixedInlet  frontBackUpperPatches  initialConditions
Proj2/assets/robot/1/polyMesh/: boundary  cellZones  faceZones  faces  neighbour  owner  pointZones  points
Proj2/assets/robot/2/polyMesh/: boundary  cellZones  faceZones  faces  neighbour  owner  pointZones  points
Proj2/assets/robot/3/polyMesh/: boundary  cellZones  faceZones  faces  neighbour  owner  pointZones  points
Proj2/assets/robot/constant/: transportProperties  turbulenceProperties
Proj2/assets/robot/constant/extendedFeatureEdgeMesh/: humanoid_robot.extendedFeatureEdgeMesh
Proj2/assets/robot/constant/polyMesh/: boundary  faces  neighbour  owner  points
Proj2/assets/robot/constant/triSurface/: README  humanoid_robot.eMesh
Proj2/assets/robot/system/: blockMeshDict  controlDict  cuttingPlane  decomposeParDict  ensightWrite  forceCoeffs  fvSchemes  fvSolution  meshQualityDict  snappyHexMeshDict  streamLines  surfaceFeatureExtractDict  wallBoundedStreamLines
Proj2/assets/sphere/: Allrun  blockTopology.vtk
Proj2/assets/sphere/constant/polyMesh/: VolMesh.cpp  boundary  faces  neighbour  output_volume.vtk  owner  points
Proj2/assets/sphere/system/: blockMeshDict  blockMeshDict.orig  controlDict  fvSchemes  fvSolution
Proj2/build_operdemo/: CMakeCache.txt  Makefile  cmake_install.cmake
Proj2/build_operdemo/src/: Makefile  cmake_install.cmake
Proj2/glut_viz/: CMakeLists.txt  ColormapWrapper.h  demo_glut.cpp  glutviz.cpp  glutviz_glfw.cpp  visuals_3.cpp
Proj2/glut_viz/glad/: glad.h
Proj2/inc/: mesh_io.h  mesh_operations.h  mesh_struct.h
Proj2/libs/glad/include/glad/: gl.h  glad.h
Proj2/mesh_lib/: CMakeLists.txt  MaterialData.cpp  a.out  mesh_lib  mesh_lib.cpp  mesh_lib.h  mesh_oper.cpp  mesh_vol.cpp  outputSphere.ply
Proj2/mesh_merge/: mesh_merge.cpp  mesh_merge.h
Proj2/src/: CMakeLists.txt  mesh_io.cpp  mesh_operations.cpp
Proj2/visual_lib/: CMakeCache.txt
Proj2/visual_lib/glad/: glad.c
Project 3/: MassCalculations.cpp  RobotGraphs.py  RobotThickCsvOBJ.cpp  ScaleOBJ.cpp  ScaledThickness.cpp
Project 3/Archive/: ParsingRobot
Project2/: .gitattributes  VTKtoOBJ.cpp
Project2/Mesh_Merger/: MeshMerger.cpp
Project2/Mesh_Merger/mesh_lib/: mesh_lib.cpp
Project2/Prev_Mesh_Merger/: merge_mesh.cpp  merge_mesh_CGAL.cpp
Project2/Proj2/: CMakeLists.txt
Project2/Proj2/Visualization_Main/Viz_Mesh/: Viz_Mesh.sln  Viz_Mesh.vcxproj
Project2/Proj2/assets/docs/: ProjectII_grading_and_presentation_template.docx
Project2/Proj2/mesh_lib/: CMakeLists.txt  mesh_lib.h
Project2/Proj2/mesh_merge/: CMakeLists.txt
Project2/Recursive-Raptors_tools/: RecursiveRaptors_Project1.cpp  test.csv
Project2/mesh_lib/: mesh_lib.cpp  mesh_lib.h
Project3/: 1D_heat_solver.cpp  1D_heat_solver.m  1D_heat_solver_HASSAN_copy_mod.cpp  Current_1D_heat_solver.cpp  HeatSolver.m  Material_Prop_CSV_Output.cpp  N1D_heat_solver_final.cpp  Project_3_Visual.cpp  README.md  SolveMulti_Layer_by_Layer.cpp  SolveWithThermalResistances.cpp  Thickness_1_hr.csv  Thickness_7_hr.csv  ThomasAlgo.cpp  a.out  thickness_profile.csv  time0_full_temp_profile.csv
Project3/Old_Trys/: 1D_heat_solver.cpp  Hassan_File_to_integrate_csv_reading.cpp  Material_Prop_CSV_Output.cpp  a.out  extra_old_code.cpp
Project3/assets/csv/: Thickness_1_hr.csv  Thickness_3_hr.csv  Thickness_7_hr.csv
Project3/assets/robot/1/polyMesh/: faceZones  pointZones
Project3/assets/robot/2/polyMesh/: boundary  cellZones  faceZones
Project3/assets/robot/constant/polyMesh/: faces
Project3/assets/robot/system/: blockMeshDict
Project3/libs/glad/src/: glad.c
Project3/mesh_lib/: CMakeLists.txt  mesh_lib.cpp
Project_3/: FinalRobotGraphs.py  Time_evolution_heat_maps.py  csv_to_obj.cpp  robot_graph.py  robot_parsingV1.cpp  robot_parsingV2.cpp  testfile_thickness_data_with_4_layers_.csv
Recursive-Raptors_tools/: Project1_HowdyTeam.cpp  Project2_DataTableClass.cpp  RecursiveRaptors_Project1.cpp  out  test.csv
(+13 files in other folders)
